# HtN-Quantum-Test-Circuit

./: README.md  pyproject.toml  setup.cfg
Xanadu_VariationalClassifier/: circuit_training_500_template.py
src/: quicklinks.txt  test_circuit.py
