[metadata]
name = HtN-Test-Circuit
version = 0.1

[options]
package_dir =
    = src
packages = find_namespace:
python_requires = >=3.8,!=3.9.7,<3.11
install_requires =
  orquestra-quantum
  orquestra-qiskit


[options.packages.find]
where = src

[options.extras_require]
dev =
    orquestra-python-dev